--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "es5",
     "module": "ESNext",
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "declaration": true, // d.ts 자동 생성
+    "typeRoots": ["./types"] // types 폴더안에 있는 d.ts파일은 모두 글로벌 모듈로 변경
   }
 }
